--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.27.1",
+    "googleapis": "^154.0.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -16,6 +17,7 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "babel-plugin-styled-components": "^2.1.4"
   }
 }
